--- a/TS_IN_ACTION/package.json
+++ b/TS_IN_ACTION/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode=development --config ./build/webpack.config.js"
+    "start": "webpack-dev-server --mode=development --config ./build/webpack.config.js",
+    "build": "webpack --mode=production --config ./build/webpack.config.js"
   },
   "keywords": [],
   "author": "",
